task flow completed

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,220 @@
-.App {
+
+.steps-content {
+  min-height: 397px;
+  margin-top: 16px;
+  
   text-align: center;
+  background-color:#ECE9E5;
+  border: 1px dashed #e9e9e9;
+  border-radius: 2px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.steps-action {
+ 
+display: flex;
+position: absolute;
+ width: 100%;
+background-color:  #FFFFFF;
+bottom: 0;
+height: 4rem;
+justify-content: center;
+align-items: center;
+ 
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.ant-btn-primary {
+ 
+ 
+  background-color: #E06358;
+  border-radius: 4px;
+  border: none;
+  width: 12rem;
+ margin-left: 70%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.ant-btn-primary:hover{
+  background-color: #E06358;
+}
+
+.app{
+  height: 100vh;
+  width: 100vw;
+  overflow-y: scroll;
+  background-color: #ECE9E5;
+}
+
+.step{
+  margin-top: 30px;
+  background-color: #ECE9E5;
+}
+
+.ant-steps{
+  background-color: #ECE9E5;
+}
+
+.ant-steps-item-icon {
+  background-color: #ECE9E5;
+  color: black;
+}
+
+ 
+.ant-steps-item-finish>.ant-steps-item-container>.ant-steps-item-tail:after {
+  background-color:#E06358;
+}
+.continer{
+  display: flex;
+}
+
+.top-container{
+  display: flex;
+
+  
+}
+
+ 
+.plan-container{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  
+  text-align: justify;
+  margin-left: 6rem;
+  margin-right: 6rem;
+ 
+ 
 }
 
-.App-link {
-  color: #61dafb;
+.plan-container h3{
+  font-size: 27px;
+  font-weight: 700;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.plan-container p{
+  margin: 0;
+  padding:0;
+}
+
+.select-plan{
+  width: 300px;
+  margin-left: 2rem;
+}
+
+option p
+{
+  display:flex;
+  width: 200px;
+  background-color: #E06358;
+}
+
+.plan-type{
+ 
+  width: 606px;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  border-radius: .4rem;
+  background-color: #FFFFFF;
+}
+
+ 
+.personal-details-form{
+  display: flex;
+ 
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.personal-details-form input{
+  width: 250px;
+
+}
+.ant-steps-item-process .ant-steps-item-icon>.ant-steps-icon .ant-steps-icon-dot {
+  background:none;
+}
+.ant-steps-item-finish .ant-steps-item-icon>.ant-steps-icon .ant-steps-icon-dot {
+  background: none;
+}
+
+
+.slider-container{
+  background-color: #FFFFFF;
+  width: 706px;
+  padding: 2rem;
+}
+
+.prof{
+  display: flex;
+}
+
+.prof h6{
+  margin-left: 10px;
+  margin-top: 8px;
+}
+
+.checkbox-cont{
+  display: flex;
+  margin-top: 1rem;
+}
+.checkbox-cont p{
+  margin-left: 1rem;
+}
+.ant-checkbox-checked .ant-checkbox-inner {
+  background-color:#D44C46;
+  border-color: #D44C46;
+}
+
+.checkbox-box{
+  display: flex;
+  flex-direction: column;
+  margin-left: 4rem;
+  width: 606px;
+  text-align: justify;
+}
+
+.review-box{
+  background-color: #FFFFFF;
+  width: 800px;
+  display: flex;
+  flex-wrap: wrap;
+ 
+  padding: 1rem;
+ 
+}
+.left-box{
+  display: flex;
+  text-align: justify;
+  flex-direction: column;
+
+}
+.right-box{
+  display: flex;
+  margin-left: 100px;
+  text-align: justify;
+  flex-direction: column;
+}
+
+.review-box h4{
+  font-weight: 400;
+  line-height: 22.4px;
+  font-size: 16px;
+}
+
+
+.left-box span{
+  line-height: 21.12px;
+  color: Gray;
+  opacity: 0.8;
+  margin-top: 2px;
+}
+
+.box{
+ margin-left: 20%;
+ text-align: justify;
+}
+
+.box h3{
+ 
+  
+font-style: normal;
+font-weight: 700;
+font-size: 27px;
+line-height: 120%;
 }
