--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 
 body {
   margin: 0;
- 
+ overflow-x: hidden;
  
   
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
